extend Validator class